Content order reorganization

--- a/source/makefile
+++ b/source/makefile
@@ -1,9 +1,9 @@
 # Update references
-references.bib:
+references.bib: bibliography/*
 	pubs -c .pubsrc export > $@
 
 # Compile PDF document
-tesis.pdf: *.md references.bib
+tesis.pdf: *.md references.bib metadata.yml
 	pandoc  \
 		*.md \
 		--pdf-engine xelatex \
