Add --number-sections to pandoc command

--- a/source/makefile
+++ b/source/makefile
@@ -9,4 +9,5 @@ tesis.pdf: *.md references.bib metadata.yml
 		--pdf-engine xelatex \
 		--metadata-file metadata.yml \
 		--citeproc \
+		--number-sections \
 		-o $@
