Add pantable filter to the compiler command, set metadata command to change page to landscape layout and add dummy table to chapter 2

--- a/source/makefile
+++ b/source/makefile
@@ -8,6 +8,7 @@ tesis.pdf: *.md references.bib metadata.yml
 		*.md \
 		--pdf-engine xelatex \
 		--metadata-file metadata.yml \
+		-F pantable \
 		--citeproc \
 		--number-sections \
 		-o $@
