--- a/source/metadata.yml
+++ b/source/metadata.yml
@@ -5,33 +5,33 @@ year: 2021
 department: Departamento de Ciencias Biológicas
 university: Universidad Nacional de La Plata
 #lang: es-ES
-documentclass: book
-bibliography: references.bib
+#documentclass: book
+#bibliography: references.bib
 #mainfont: Carlito-Regular
 #mainfontoptions:
 #- BoldFont=Carlito-Bold
 #- ItalicFont=Carlito-Italic
-fontsize: 12pt
-geometry: "top=1in,bottom=1in,left=1in,right=1in"
-output: pdf_document
-papersize: a4
-link-citations: yes # make citations with hyperlinks
-linestretch: 1.5
-header-includes:
-    - \usepackage{setspace}
-    - \usepackage[spanish]{babel}       # Set Spanish as the language
-    - \renewcommand\spanishtablename{Tabla} # Change Cuadro -> Tabla for tables
-    - \doublespacing
-    - \usepackage[labelfont=bf]{caption} # Figures name in Bold
-    - \usepackage{fancyhdr}
-    - \pagestyle{fancy}
-    - \fancyhf{}
-    - \fancyhead[RO,LE]{Tesis doctoral}
-    - \fancyfoot[CE,CO]{\thepage}
-    - \renewcommand{\headrulewidth}{1pt} # Set header ruler to 1pt
-    - \renewcommand{\footrulewidth}{1pt} # Set footer ruler to 1pt
-    - \usepackage{pdflscape}
-    - \newcommand{\blandscape}{\begin{landscape}}
-    - \newcommand{\elandscape}{\end{landscape}}
+#fontsize: 12pt
+#geometry: "top=1in,bottom=1in,left=1in,right=1in"
+#output: pdf_document
+#papersize: a4
+#link-citations: yes # make citations with hyperlinks
+#linestretch: 1.5
+#header-includes:
+#    - \usepackage{setspace}
+#    - \usepackage[spanish]{babel}       # Set Spanish as the language
+#    - \renewcommand\spanishtablename{Tabla} # Change Cuadro -> Tabla for tables
+#    - \doublespacing
+#    - \usepackage[labelfont=bf]{caption} # Figures name in Bold
+#    - \usepackage{fancyhdr}
+#    - \pagestyle{fancy}
+#    - \fancyhf{}
+#    - \fancyhead[RO,LE]{Tesis doctoral}
+#    - \fancyfoot[CE,CO]{\thepage}
+#    - \renewcommand{\headrulewidth}{1pt} # Set header ruler to 1pt
+#    - \renewcommand{\footrulewidth}{1pt} # Set footer ruler to 1pt
+#    - \usepackage{pdflscape}
+#    - \newcommand{\blandscape}{\begin{landscape}}
+#    - \newcommand{\elandscape}{\end{landscape}}
 ---
 
