Add final corrections

--- a/source/makefile
+++ b/source/makefile
@@ -3,18 +3,21 @@ references.bib: bibliography/*
 	pubs -c .pubsrc export > $@
 
 # Compile PDF document
-tesis.pdf: *.md references.bib metadata.yml
+tesis.pdf: *.md references.bib
 	pandoc  \
 		*.md \
-		--template=template.tex \
 		--include-in-header=preamble.tex \
+		--template=template.tex \
 		--variable=fontsize:11pt \
+		--variable=mainfont:cmunrm.ttf \
+		--variable=mainfontoptions:BoldFont=cmunbx.ttf \
+		--variable=mainfontoptions:ItalicFont=cmunti.ttf \
+		--variable=mainfontoptions:BoldItalicFont=cmunbi.ttf \
 		--variable=papersize:a4paper \
 		--variable=documentclass:book \
 		--variable=link-citations:yes \
 		--pdf-engine xelatex \
 		--filter pantable \
-		--metadata-file metadata.yml \
 		--bibliography=references.bib \
 		--citeproc \
 		--number-sections \
